Fix attaching files using the keyboard
We were hiding the file input and styling the label as a button instead.
Since clicking on a label has the same effect as clicking on the input,
the input worked properly for mouse and touch screen users.

However, hiding the input makes it inaccessible for keyboard users,
since labels don't get keyboard focus, but inputs do.

So we must not hide the input but make it invisible instead. But we
still need to hide the input (alongside the label) after a file has been
attached.

We could add some extra JavaScript to hide the input when we hide the
label. Since the JavaScript is already quite complex and my first few
attempts at changing it failed, I've opted to assume that the input (and
its label) must be hidden whenever there's already a file name, and
implement that rule with CSS.

Note we're using the `:focus-within` pseudoclass to style a label when
focus is on the input. This rule (at the time of writing) is only
supported by 93.5% of the browsers. Keyboard users without a screen
reader and using the other 6.5% of the browsers will still be able to
focus on the field but might not notice the field has received focus.
Since the percentage of affected users will decrease over time and until
now 100% of keyboard users were completely unable to focus on these
fields, for now we think this is a good-enough solution.

--- a/app/assets/stylesheets/mixins/uploads.scss
+++ b/app/assets/stylesheets/mixins/uploads.scss
@@ -20,13 +20,17 @@
       p {
         margin-bottom: 0;
       }
+
+      &:focus-within label {
+        outline: $outline-focus;
+      }
     }
 
     .attachment-errors {
 
       > .js-image-attachment,
       > .js-document-attachment {
-        display: none;
+        @include element-invisible;
 
         ~ .error {
           display: inline-block;
@@ -45,6 +49,11 @@
     margin-top: 0;
 
     &:empty {
+      display: none;
+    }
+
+    &:not(:empty) + .document-attachment,
+    &:not(:empty) + .image-attachment {
       display: none;
     }
   }
